<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Parallel</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="licenseNumber">License Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email2">Email</string>
    <string name="new_here_create_account">New Here? Create Account</string>
    <string name="login2">Login</string>
    <string name="already_have_an_acount_login_here">Already have an acount? Login Here</string>
    <string name="title_activity_maps">Map</string>
    <string name="nameText">Undefined</string>
    <string name="where_to">Where To</string>
    <string name="google_maps_key" translatable="false">

        AIzaSyDHZGwLQ2vdnjz9u_zUyyJYWrBF9_rSSms
    </string>
    <string name="locBtn"> </string>
    <string name="get_started">Get Started</string>
    <string name="logout">logout</string>
    <string name="reg">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="your_name">Your Name</string>
    <string name="name">Full Name</string>
    <string name="your_email">Email</string>
    <string name="phone">Phone</string>
    <string name="log">Logout</string>
    <string name="licence_number">Licence Number</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_profile">Change Profile</string>

    <string name="title_activity_time_picker">TimePicker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_redirection">Map</string>


</resources>